
EXTRA_DIST = ./ZEUS-DDIS_2009/fitC/ewparam.txt \
 ./ZEUS-DDIS_2009/fitC/steering.txt \
 ./ZEUS-DDIS_2009/fitC/minuit.in.txt \
 ./ZEUS-DDIS_2009/fitC/output/fittedresults.txt \
 ./ZEUS-DDIS_2009/fitC/output/minuit.out_002m.txt \
 ./ZEUS-DDIS_2009/fitC/output/params_006m.txt \
 ./ZEUS-DDIS_2009/fitC/output/Results_005m.txt \
 ./ZEUS-DDIS_2009/fitC/output/minuit.out_0.txt \
 ./ZEUS-DDIS_2009/fitC/output/MI_saved_006m.txt \
 ./ZEUS-DDIS_2009/fitC/output/statcov_0.txt \
 ./ZEUS-DDIS_2009/fitC/output/params_005p.txt \
 ./ZEUS-DDIS_2009/fitC/output/params_0.txt \
 ./ZEUS-DDIS_2009/fitC/output/pdfs_q2val_03.txt \
 ./ZEUS-DDIS_2009/fitC/output/MI_saved_005p.txt \
 ./ZEUS-DDIS_2009/fitC/output/minuit.save_004p.txt \
 ./ZEUS-DDIS_2009/fitC/output/minuit.out_005m.txt \
 ./ZEUS-DDIS_2009/fitC/output/Results_002m.txt \
 ./ZEUS-DDIS_2009/fitC/output/pdfs_q2val_02.txt \
 ./ZEUS-DDIS_2009/fitC/output/offset.save.txt \
 ./ZEUS-DDIS_2009/fitC/output/minuit.save_0.txt \
 ./ZEUS-DDIS_2009/fitC/output/params_005m.txt \
 ./ZEUS-DDIS_2009/fitC/output/params_004m.txt \
 ./ZEUS-DDIS_2009/fitC/output/minuit.out_006m.txt \
 ./ZEUS-DDIS_2009/fitC/output/minuit.save_003m.txt \
 ./ZEUS-DDIS_2009/fitC/output/params_002m.txt \
 ./ZEUS-DDIS_2009/fitC/output/Results_004p.txt \
 ./ZEUS-DDIS_2009/fitC/output/Results_001p.txt \
 ./ZEUS-DDIS_2009/fitC/output/params_001m.txt \
 ./ZEUS-DDIS_2009/fitC/output/Results_001m.txt \
 ./ZEUS-DDIS_2009/fitC/output/minuit.save_003p.txt \
 ./ZEUS-DDIS_2009/fitC/output/params_003p.txt \
 ./ZEUS-DDIS_2009/fitC/output/Results_003m.txt \
 ./ZEUS-DDIS_2009/fitC/output/MI_saved_001p.txt \
 ./ZEUS-DDIS_2009/fitC/output/params_006p.txt \
 ./ZEUS-DDIS_2009/fitC/output/minuit.save_006p.txt \
 ./ZEUS-DDIS_2009/fitC/output/MI_saved_003p.txt \
 ./ZEUS-DDIS_2009/fitC/output/MI_saved_002p.txt \
 ./ZEUS-DDIS_2009/fitC/output/minuit.out.txt \
 ./ZEUS-DDIS_2009/fitC/output/MI_saved_004m.txt \
 ./ZEUS-DDIS_2009/fitC/output/Results_003p.txt \
 ./ZEUS-DDIS_2009/fitC/output/minuit.out_001p.txt \
 ./ZEUS-DDIS_2009/fitC/output/Results_002p.txt \
 ./ZEUS-DDIS_2009/fitC/output/MI_saved_0.txt \
 ./ZEUS-DDIS_2009/fitC/output/minuit.save_002m.txt \
 ./ZEUS-DDIS_2009/fitC/output/params_003m.txt \
 ./ZEUS-DDIS_2009/fitC/output/minuit.out_002p.txt \
 ./ZEUS-DDIS_2009/fitC/output/pdfs_q2val_04.txt \
 ./ZEUS-DDIS_2009/fitC/output/minuit.out_006p.txt \
 ./ZEUS-DDIS_2009/fitC/output/minuit.save_005p.txt \
 ./ZEUS-DDIS_2009/fitC/output/MI_saved_006p.txt \
 ./ZEUS-DDIS_2009/fitC/output/params_004p.txt \
 ./ZEUS-DDIS_2009/fitC/output/pdfs_q2val_01.txt \
 ./ZEUS-DDIS_2009/fitC/output/Results_004m.txt \
 ./ZEUS-DDIS_2009/fitC/output/Results_006m.txt \
 ./ZEUS-DDIS_2009/fitC/output/MI_saved_002m.txt \
 ./ZEUS-DDIS_2009/fitC/output/MI_saved_001m.txt \
 ./ZEUS-DDIS_2009/fitC/output/pdfs_q2val_05.txt \
 ./ZEUS-DDIS_2009/fitC/output/minuit.save_001p.txt \
 ./ZEUS-DDIS_2009/fitC/output/minuit.out_003p.txt \
 ./ZEUS-DDIS_2009/fitC/output/minuit.save_006m.txt \
 ./ZEUS-DDIS_2009/fitC/output/Results_006p.txt \
 ./ZEUS-DDIS_2009/fitC/output/minuit.save_001m.txt \
 ./ZEUS-DDIS_2009/fitC/output/minuit.out_001m.txt \
 ./ZEUS-DDIS_2009/fitC/output/minuit.out_005p.txt \
 ./ZEUS-DDIS_2009/fitC/output/params_001p.txt \
 ./ZEUS-DDIS_2009/fitC/output/minuit.out_003m.txt \
 ./ZEUS-DDIS_2009/fitC/output/FitPDF.log \
 ./ZEUS-DDIS_2009/fitC/output/minuit.save_004m.txt \
 ./ZEUS-DDIS_2009/fitC/output/MI_saved_004p.txt \
 ./ZEUS-DDIS_2009/fitC/output/Results_005p.txt \
 ./ZEUS-DDIS_2009/fitC/output/MI_saved_003m.txt \
 ./ZEUS-DDIS_2009/fitC/output/minuit.out_004p.txt \
 ./ZEUS-DDIS_2009/fitC/output/params_002p.txt \
 ./ZEUS-DDIS_2009/fitC/output/Results_0.txt \
 ./ZEUS-DDIS_2009/fitC/output/minuit.save_002p.txt \
 ./ZEUS-DDIS_2009/fitC/output/minuit.save_005m.txt \
 ./ZEUS-DDIS_2009/fitC/output/MI_saved_005m.txt \
 ./ZEUS-DDIS_2009/fitC/output/minuit.out_004m.txt \
 ./ZEUS-DDIS_2009/cmp_offs_results.tcl \
 ./ZEUS-DDIS_2009/get_input.tcl \
 ./output_ALLdata_FULLFIT/fittedresults.txt \
 ./output_ALLdata_FULLFIT/pdfs_q2val_03.txt \
 ./output_ALLdata_FULLFIT/pdfs_q2val_02.txt \
 ./output_ALLdata_FULLFIT/pdfs_q2val_06.txt \
 ./output_ALLdata_FULLFIT/Status.out \
 ./output_ALLdata_FULLFIT/minuit.out.txt \
 ./output_ALLdata_FULLFIT/pdfs_q2val_04.txt \
 ./output_ALLdata_FULLFIT/Results.txt \
 ./output_ALLdata_FULLFIT/pdfs_q2val_01.txt \
 ./output_ALLdata_FULLFIT/pdfs_q2val_05.txt \
 ./output_FULLFIT/fittedresults.txt \
 ./output_FULLFIT/pdfs_q2val_03.txt \
 ./output_FULLFIT/pdfs_q2val_02.txt \
 ./output_FULLFIT/pdfs_q2val_08.txt \
 ./output_FULLFIT/pdfs_q2val_06.txt \
 ./output_FULLFIT/Status.out \
 ./output_FULLFIT/minuit.out.txt \
 ./output_FULLFIT/pdfs_q2val_04.txt \
 ./output_FULLFIT/Results.txt \
 ./output_FULLFIT/pdfs_q2val_01.txt \
 ./output_FULLFIT/pdfs_q2val_07.txt \
 ./output_FULLFIT/pdfs_q2val_05.txt \
 ./output_ALLdata/fittedresults.txt \
 ./output_ALLdata/pdfs_q2val_03.txt \
 ./output_ALLdata/pdfs_q2val_02.txt \
 ./output_ALLdata/pdfs_q2val_06.txt \
 ./output_ALLdata/minuit.out.txt \
 ./output_ALLdata/pdfs_q2val_04.txt \
 ./output_ALLdata/Results.txt \
 ./output_ALLdata/pdfs_q2val_01.txt \
 ./output_ALLdata/pdfs_q2val_05.txt \
 ./output/fittedresults.txt \
 ./output/pdfs_q2val_03.txt \
 ./output/pdfs_q2val_02.txt \
 ./output/pdfs_q2val_08.txt \
 ./output/pdfs_q2val_06.txt \
 ./output/minuit.out.txt \
 ./output/pdfs_q2val_04.txt \
 ./output/Results.txt \
 ./output/pdfs_q2val_01.txt \
 ./output/pdfs_q2val_07.txt \
 ./output/pdfs_q2val_05.txt 
