
EXTRA_DIST = ./output/fittedresults.txt \
 ./output/pdfs_q2val_03.txt \
 ./output/pdfs_q2val_02.txt \
 ./output/pdfs_q2val_08.txt \
 ./output/pdfs_q2val_06.txt \
 ./output/minuit.out.txt \
 ./output/pdfs_q2val_04.txt \
 ./output/Results.txt \
 ./output/pdfs_q2val_01.txt \
 ./output/pdfs_q2val_07.txt \
 ./output/pdfs_q2val_05.txt 
