AUTOMAKE_OPTIONS = foreign

#noinst_HEADERS = ntot.inc theo.inc pdfparam.inc alphas.inc systematics.inc \
#                 steering.inc pdflength.inc for_debug.inc indata.inc couplings.inc \
#                 thresholds.inc datasets.inc  endmini.inc  dipole.inc
pkginclude_HEADERS = TheorEval.h covar.inc     extrapars.inc  indata.inc    pdflength.inc     reweighting.inc  theo.inc \
                    alphas.inc   datasets.inc  fcn.inc        iofnames.inc  pdfparam.inc      scales.inc       theorexpr.inc \
                    applgrid_fastpdf.inc  dipole.inc    for_debug.inc  nnpdf.inc  polarity.inc      steering.inc thresholds.inc \
                    couplings.inc  endmini.inc   g_offset.inc   ntot.inc   qcdnumhelper.inc  systematics.inc herafitter_cpp.h
