AUTOMAKE_OPTIONS = foreign

#noinst_HEADERS = ntot.inc theo.inc pdfparam.inc alphas.inc systematics.inc \
#                 steering.inc pdflength.inc for_debug.inc indata.inc couplings.inc \
#                 thresholds.inc datasets.inc  endmini.inc  dipole.inc
pkginclude_HEADERS = \
 alphas.inc             chi2scan.inc     covar.inc     endmini.inc    fractal.inc   list.h         pdfparam.inc      steering.inc     theorexpr.inc\
 APFELgridGeneration.h  c_interface.inc  datasets.inc  extrapars.inc  g_offset.inc  ntot.inc       polarity.inc      systematics.inc  thresholds.inc\
 applgrid_fastpdf.inc   CommonGrid.h     dimensions.h  fcn.inc        indata.inc    pdf2yaml.h     qcdnumhelper.inc  theo.inc         xfitter_cpp.h\
 c2yaml.h               couplings.inc    dipole.inc    for_debug.inc  iofnames.inc  pdflength.inc  scales.inc        TheorEval.h

