AUTOMAKE_OPTIONS = foreign

#noinst_HEADERS = ntot.inc theo.inc pdfparam.inc alphas.inc systematics.inc \
#                 steering.inc pdflength.inc for_debug.inc indata.inc couplings.inc \
#                 thresholds.inc datasets.inc  endmini.inc  dipole.inc


dist_noinst_HEADERS = alphas.inc     endmini.inc    indata.inc    ntot.inc                      theo.inc    \
APFELgridGeneration.h  couplings.inc  extrapars.inc  iofnames.inc  pdf2yaml.h        TheorEval.h \
applgrid_fastpdf.inc   covar.inc      fcn.inc        list.h        pdflength.inc     ReactionTheory.h            theorexpr.inc \
c2yaml.h               datasets.inc   for_debug.inc scales.inc  xfitter_steer.h     xfitter_pars.h           thresholds.inc \
chi2scan.inc           dimensions.h   fractal.inc     polarity.inc      steering.inc \
c_interface.inc        dipole.inc     g_offset.inc   Makefile.in   qcdnumhelper.inc  systematics.inc             xfitter_cpp.h xfitter_cpp_base.h CheckForPDF.h Profiler.h
