dist_data_DATA = ewparam.txt.DIFFRACTION   minuit.in.txt.DIFFRACTION steering.txt.ALLdata \
                 ewparam.txt.def           minuit.in.txt.dipole      steering.txt.DIFFRACTION \
                 minuit.in.txt.10pHERAPDF  minuit.in.txt.kt-factorisation \
                 minuit.in.txt.13pHERAPDF  steering.txt.dipole \
                 minuit.in.txt.BiLog       steer-ep-CASCADE  steering.txt.kt-factorisation \
                 minuit.in.txt.CHEB        steer_gluon-evolv steer_gluon-saturation \
                 minuit.in.txt.CTEQ        minuit.in.txt.kt-factorisation-saturation 
