EXTRA_DIST = covar.in                   minuit.in.txt.CTEQHERA                      steer_gluon-evolv \
                 ewparam.txt.def            minuit.in.txt.DIFFRACTION                  steer_gluon-saturation \
                 ewparam.txt.DIFFRACTION    minuit.in.txt.dipole                       steering.txt.ALLdata \
                 ewparam.txt.HERAI+II.NLO   minuit.in.txt.fractal                      steering.txt.def \
                 ewparam.txt.HERAI+II.NNLO  minuit.in.txt.GENETIC                      steering.txt.DIFFRACTION \
                 ewparam.txt.ATLASepWZ16    minuit.in.txt.HERAI+II+charm+jets.asfree   steering.txt.dipole  \
                 minuit.in.txt.HERAI+II.NLO                 steering.txt.fractal \
                 minuit.in.txt.HERAI+II.NNLO                steering.txt.HERAI+II.NLO \
                 minuit.in.txt.hvqmnr.abs                   steering.txt.HERAI+II.NNLO \
                 minuit.in.txt.hvqmnr.norm                  steering.txt.hvqmnr.abs \
				 minuit.in.txt.ATLASepWZ16                  steering.txt.ATLASepWZ16 \
                 minuit.in.txt.BiLog        minuit.in.txt.kt-factorisation             steering.txt.hvqmnr.norm \
                 minuit.in.txt.CHEB         minuit.in.txt.kt-factorisation-saturation  steering.txt.kt-factorisation \
                 minuit.in.txt.CTEQ         steer-ep-CASCADE steering.txt.BiLog steering.txt.CHEB steering.txt.CTEQ \
                 steering.txt.GENETIC steering.txt.kt-factorisation-saturation minuit.in.txt.def steering.txt.CTEQHERA
