AUTOMAKE_OPTIONS = foreign

pkginclude_HEADERS = Coca.h MDipol.h byteswap.h gZDPDF.h  mathcst.h qcdnum_pdf.h  tblipol.h  xgrid.h \
                     DDIS.coca Param.h config.h gauss.h mathut.h qcdpars.h timer.h xgrid_base.h \
                     DataTable.h TRc.h ddis.h genut.h   mosat.h qgrid.h trs.h \
                     FFstrFns.h TheModel_base.h dilog.h grvpi.h   pdf_base.h qgrid_base.h  types.h \
                     GrdHeader.h  aqcd.h emsg.h hdpdf.h   physparams.h  rpc.h  xdr++.h \
                     JScif.h basic_defs.h flux.h ifun.h plug_DDIS.h   sock_DDIS.h   xdr.h
